--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
 							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
 
-							<p>I'm originally from Sydney, Australia, but now I call Seattle, Washington <br><br>
+							<p>I grew up on the Northern Beaches, Sydney, Australia, but now I call Seattle, Washington <br><br>
 								I completed my undergraduate degree in Leisure Management from the University of Technology Sydney. I have worked in GIS since 2009, 
 								first at a large Seattle area travel company, then in various geospatial business intelligence and technical roles.</p>
 
@@ -157,24 +157,21 @@
 								<h2>Contact</h2>
 							</header>
 
-							<p>Elementum sem parturient nulla quam placerat viverra
-							mauris non cum elit tempus ullamcorper dolor. Libero rutrum ut lacinia
-							donec curae mus. Eleifend id porttitor ac ultricies lobortis sem nunc
-							orci ridiculus faucibus a consectetur. Porttitor curae mauris urna mi dolor.</p>
-
-							<form method="post" action="#">
-								<div class="row">
-									<div class="col-6 col-12-mobile"><input type="text" name="name" placeholder="Name" /></div>
-									<div class="col-6 col-12-mobile"><input type="text" name="email" placeholder="Email" /></div>
-									<div class="col-12">
-										<textarea name="message" placeholder="Message"></textarea>
-									</div>
-									<div class="col-12">
-										<input type="submit" value="Send Message" />
-									</div>
-								</div>
-							</form>
-
+							<p>
+								When I'm not
+								working or completing my research, you can find me in the mountains.
+							</p>
+							<br>
+							<p>Find me on social media, or contact me via email!</p>
+							<!-- Social Icons -->
+							<ul class="icons">
+								<li><a href="https://www.linkedin.com/in/mtribe/" class="icon fa-linkedin"><span
+											class="label">Linkedin</span></a></li>
+								<li><a href="mailto:michaeljtribe@gmail.com" class="icon fa-envelope"><span
+											class="label">Email</span></a></li>
+							</ul>
+							<a href="#">Back to Top</a>
+			
 						</div>
 					</section>
 
