--- a/index.html
+++ b/index.html
@@ -42,11 +42,15 @@
 
 					<!-- Social Icons -->
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+							<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
 							<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li> -->
+							<li><a href="https://www.linkedin.com/in/mtribe/" class="icon brands fa-linkedin"><span
+								class="label">Linkedin</span></a></li>
+							<li><a href="mailto:michaeljtribe@gmail.com" class="icon fa-envelope"><span
+								class="label">Email</span></a></li>
 						</ul>
 
 				</div>
@@ -89,13 +93,13 @@
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 										<header>
-											<h3>Ipsum Feugiat</h3>
+											<h3>Portfolio Placeholder 1</h3>
 										</header>
 									</article>
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
 										<header>
-											<h3>Rhoncus Semper</h3>
+											<h3>Portfolio Placeholder 2</h3>
 										</header>
 									</article>
 								</div>
@@ -103,13 +107,13 @@
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 										<header>
-											<h3>Magna Nullam</h3>
+											<h3>Portfolio Placeholder 3</h3>
 										</header>
 									</article>
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 										<header>
-											<h3>Natoque Vitae</h3>
+											<h3>Portfolio Placeholder 4</h3>
 										</header>
 									</article>
 								</div>
@@ -117,13 +121,13 @@
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
 										<header>
-											<h3>Dolor Penatibus</h3>
+											<h3>Portfolio Placeholder 5</h3>
 										</header>
 									</article>
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
 										<header>
-											<h3>Orci Convallis</h3>
+											<h3>Portfolio Placeholder 6</h3>
 										</header>
 									</article>
 								</div>
@@ -142,7 +146,7 @@
 
 							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
 
-							<p>I grew up on the Northern Beaches, Sydney, Australia, but now I call Seattle, Washington <br><br>
+							<p>I grew up on the Northern Beaches, Sydney, Australia, but now I call Seattle, Washington home.<br><br>
 								I completed my undergraduate degree in Leisure Management from the University of Technology Sydney. I have worked in GIS since 2009, 
 								first at a large Seattle area travel company, then in various geospatial business intelligence and technical roles.</p>
 
@@ -165,7 +169,7 @@
 							<p>Find me on social media, or contact me via email!</p>
 							<!-- Social Icons -->
 							<ul class="icons">
-								<li><a href="https://www.linkedin.com/in/mtribe/" class="icon fa-linkedin"><span
+								<li><a href="https://www.linkedin.com/in/mtribe/" class="icon brands fa-linkedin"><span
 											class="label">Linkedin</span></a></li>
 								<li><a href="mailto:michaeljtribe@gmail.com" class="icon fa-envelope"><span
 											class="label">Email</span></a></li>
