--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
 							<p>
 								When I'm not
-								working or completing my research, you can find me in the mountains.
+								working on a project, you can find me in the mountains.
 							</p>
 							<br>
 							<p>Find me on social media, or contact me via email!</p>
