--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <!--
 	Prologue by HTML5 UP
+	https://html5up.net/prologue
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 	
@@ -91,9 +92,9 @@
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+										<a href="https://uwtrigeo.github.io/503Final_Project/" target="_blank" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 										<header>
-											<h3>Portfolio Placeholder 1</h3>
+											<h3><a href="https://uwtrigeo.github.io/503Final_Project/" target="_blank">Web GIS Final Project</a></h3>
 										</header>
 									</article>
 									<article class="item">
@@ -105,9 +106,9 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+										<a href="images/Abstract.pdf" target="_blank"  class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 										<header>
-											<h3>Portfolio Placeholder 3</h3>
+											<h3><a href="images/Abstract.pdf" target="_blank">Capstone project proposal</a></h3>
 										</header>
 									</article>
 									<article class="item">
