--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+										<a href="https://uwtrigeo.github.io/lab5/" target="_blank" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
 										<header>
-											<h3>Portfolio Placeholder 2</h3>
+											<h3><a href="https://uwtrigeo.github.io/lab5/" target="_blank">Leaflet Routing</a></h3>
 										</header>
 									</article>
 								</div>
@@ -108,27 +108,27 @@
 									<article class="item">
 										<a href="images/Abstract.pdf" target="_blank"  class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 										<header>
-											<h3><a href="images/Abstract.pdf" target="_blank">Capstone project proposal</a></h3>
+											<h3><a href="images/Abstract.pdf" target="_blank">Capstone Project</a></h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+										<a href="https://uwtrigeo.github.io/504lab2/" target="_blank" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 										<header>
-											<h3>Portfolio Placeholder 4</h3>
+											<h3><a href="https://uwtrigeo.github.io/504lab2/" target="_blank">Turf.js</a></h3>
 										</header>
 									</article>
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+										<a href="https://uwtrigeo.github.io/lab3/" target="_blank" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
 										<header>
-											<h3>Portfolio Placeholder 5</h3>
+											<h3><a href="https://uwtrigeo.github.io/lab3/" target="_blank">Live Data Feed and Leaflet. Earthquakes and Faults</a></h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
+										<a href="https://uwtrigeo.github.io/lab6/" target="_blank" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
 										<header>
-											<h3>Portfolio Placeholder 6</h3>
+											<h3><a href="https://uwtrigeo.github.io/lab6/" target="_blank">Mapbox 3D Terrain</a></h3>
 										</header>
 									</article>
 								</div>
