--- a/index.html
+++ b/index.html
@@ -149,7 +149,10 @@
 
 							<p>I grew up on the Northern Beaches, Sydney, Australia, but now I call Seattle, Washington home.<br><br>
 								I completed my undergraduate degree in Leisure Management from the University of Technology Sydney. I have worked in GIS since 2009, 
-								first at a large Seattle area travel company, then in various geospatial business intelligence and technical roles.</p>
+								first at a large Seattle area travel company, then in various geospatial business intelligence and technical roles.<br><br>
+								With a Master of Science in geospatial technology, I am equipped with a strong foundation in spatial analysis, remote sensing, GIS, and geospatial data management, enabling me to navigate the interdisciplinary nature of this field.<br><br>
+
+								My overarching goal is to leverage my expertise and skills to contribute to the advancement of geospatial technology and its applications in various sectors. I aspire to work at the intersection of technology, data science, and geospatial analysis, where I can integrate diverse datasets, leverage cutting-edge tools and techniques, and provide valuable insights to inform decision-making processes.</p>
 
 						</div>
 					</section>
