--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 							<header>
 								<h2 class="alt">Hi! I'm <strong>Michael Tribe</strong>, a GIS Analyst<br /></h2>
 								<!-- site template designed by <a href="http://html5up.net">HTML5 UP</a>. -->
-								<p>I am a citizen of the world, a glass half full person with a passion <br />
+								<p>I'm a glass half full guy with a passion <br />
 									for data-driven analysis and the geographic visualization of data.</p>
 							</header>
 
