--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="images/Abstract.pdf" target="_blank"  class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+										<a href="https://uwtrigeo.github.io/USASkiAreaData/index.html" target="_blank"  class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 										<header>
-											<h3><a href="images/Abstract.pdf" target="_blank">Capstone Project</a></h3>
+											<h3><a href="images/Abstract.pdf" target="_blank">Capstone Project - USA Ski Resort Features Analysis</a></h3>
 										</header>
 									</article>
 									<article class="item">
