--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
 
 							<p>I grew up on the Northern Beaches, Sydney, Australia, but now I call Seattle, Washington home.<br><br>
-								I completed my undergraduate degree in Leisure Management from the University of Technology Sydney. I have worked in GIS since 2009, 
+								I completed my Master of Science in Geospatial Technologies, summa cum laude, from the University of Washington and my undergraduate degree in Leisure Management from the University of Technology Sydney. I have worked in GIS since 2009, 
 								first at a large Seattle area travel company, then in various geospatial business intelligence and technical roles.<br><br>
 								With a Master of Science in geospatial technology, I am equipped with a strong foundation in spatial analysis, remote sensing, GIS, and geospatial data management, enabling me to navigate the interdisciplinary nature of this field.<br><br>
 
