--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 								working on a project, you can find me in the mountains.
 							</p>
 							<br>
-							<p>Find me on social media, or contact me via email!</p>
+							<p>Find me on Linkedin, or contact me via email!</p>
 							<!-- Social Icons -->
 							<ul class="icons">
 								<li><a href="https://www.linkedin.com/in/mtribe/" class="icon brands fa-linkedin"><span
