--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="https://uwtrigeo.github.io/lab3/" target="_blank" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+										<a href="https://aussiefella1.github.io/503lab3/" target="_blank" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
 										<header>
-											<h3><a href="https://uwtrigeo.github.io/lab3/" target="_blank">Live Data Feed and Leaflet. Earthquakes and Faults</a></h3>
+											<h3><a href="https://aussiefella1.github.io/503lab3/" target="_blank">Live Data Feed and Leaflet. Earthquakes and Faults</a></h3>
 										</header>
 									</article>
 									<article class="item">
